imclient/marslib/include/WFClient.h



//general function callback
typedef void (WFCAPI *fun_general_void_success_callback)(void *pObject, int objectDataType);

typedef void (WFCAPI *fun_general_string_success_callback)(void *pObject, int objectDataType, const char *cval, size_t val_len);

typedef void (WFCAPI *fun_general_error_callback)(void *pObject, int objectDataType, int errorCode);


extern "C" PROTOWRAPPER_API void WFCAPI modifyMyInfo(int type, const char *value, size_t len, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API bool WFCAPI isGlobalSilent();

extern "C" PROTOWRAPPER_API void WFCAPI setGlobalSilent(bool slient, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API bool WFCAPI isHiddenNotificationDetail();


extern "C" PROTOWRAPPER_API void WFCAPI setHiddenNotificationDetail(bool hidden, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API bool WFCAPI isHiddenGroupMemberName(const char *cgroupId, size_t groupId_len);


extern "C" PROTOWRAPPER_API void WFCAPI setHiddenGroupMemberName(const char *cgroupId, size_t groupId_len, bool hidden, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);




extern "C" PROTOWRAPPER_API bool WFCAPI isEnableSyncDraft();


extern "C" PROTOWRAPPER_API void WFCAPI joinChatroom(const char *cchatroomId, size_t chatroomId_len, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI quitChatroom(const char *cchatroomId, size_t chatroomId_len, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI getChatroomInfo(const char *cchatroomId, size_t chatroomId_len, int64_t updateDt, fun_general_string_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI getChatroomMemberInfo(const char *cchatroomId, size_t chatroomId_len, int maxCount, fun_general_string_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API const char* WFCAPI getJoinedChatroomId(size_t *retlen);


extern "C" PROTOWRAPPER_API void WFCAPI createChannel(const char *cchannelName, size_t channelName_len, const char *cchannelPortrait, size_t channelPortrait_len, const char *cdesc, size_t desc_len, const char *cextra, size_t extra_len, fun_general_string_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API const char* WFCAPI getChannelInfo(const char *cchannelId, size_t channelId_len, bool refresh, size_t *retlen);


extern "C" PROTOWRAPPER_API void WFCAPI modifyChannelInfo(const char *cchannelId, size_t channelId_len, int type, const char *cnewValue, size_t newValue_len, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI searchChannel(const char *ckeyword, size_t keyword_len, fun_general_string_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API bool WFCAPI isListenedChannel(const char *cchannelId, size_t channelId_len);


extern "C" PROTOWRAPPER_API void WFCAPI listenChannel(const char *cchannelId, size_t channelId_len, bool listen, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API const char* WFCAPI getMyChannels(size_t *retlen);


extern "C" PROTOWRAPPER_API const char* WFCAPI getListenedChannels(size_t *retlen);


extern "C" PROTOWRAPPER_API void WFCAPI getRemoteListenedChannels(fun_general_string_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);



extern "C" PROTOWRAPPER_API void WFCAPI destoryChannel(const char *cchannelId, size_t channelId_len, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API const char* WFCAPI getAppPath(size_t *retlen);



extern "C" PROTOWRAPPER_API const char* WFCAPI getDomainInfo(const char *cdomainId, size_t domainId_len, bool refresh, size_t *retlen);