imclient/lib/src/ffi/wfclient_bindings.dart


  late final void Function(int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) modifyMyInfo =
      _lib.lookupFunction<Void Function(Int32, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('modifyMyInfo');

  late final bool Function() isGlobalSilent =
      _lib.lookupFunction<Bool Function(), bool Function()>('isGlobalSilent');

  late final void Function(bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) setGlobalSilent =
      _lib.lookupFunction<Void Function(Bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('setGlobalSilent');

  late final bool Function() isHiddenNotificationDetail =
      _lib.lookupFunction<Bool Function(), bool Function()>('isHiddenNotificationDetail');

  late final void Function(bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) setHiddenNotificationDetail =
      _lib.lookupFunction<Void Function(Bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('setHiddenNotificationDetail');

  late final bool Function(Pointer<Char>, int) isHiddenGroupMemberName =
      _lib.lookupFunction<Bool Function(Pointer<Char>, Size), bool Function(Pointer<Char>, int)>('isHiddenGroupMemberName');

  late final void Function(Pointer<Char>, int, bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) setHiddenGroupMemberName =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('setHiddenGroupMemberName');

  late final bool Function() isEnableSyncDraft =
      _lib.lookupFunction<Bool Function(), bool Function()>('isEnableSyncDraft');

  late final void Function(Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) joinChatroom =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('joinChatroom');

  late final void Function(Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) quitChatroom =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('quitChatroom');

  late final void Function(Pointer<Char>, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) getChatroomInfo =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Int64, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('getChatroomInfo');

  late final void Function(Pointer<Char>, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) getChatroomMemberInfo =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Int32, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('getChatroomMemberInfo');

  late final Pointer<Char> Function(Pointer<Size>) getJoinedChatroomId =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Size>), Pointer<Char> Function(Pointer<Size>)>('getJoinedChatroomId');

  late final void Function(Pointer<Char>, int, Pointer<Char>, int, Pointer<Char>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) createChannel =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Pointer<Char>, Size, Pointer<Char>, Size, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, Pointer<Char>, int, Pointer<Char>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('createChannel');

  late final Pointer<Char> Function(Pointer<Char>, int, bool, Pointer<Size>) getChannelInfo =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Char>, Size, Bool, Pointer<Size>), Pointer<Char> Function(Pointer<Char>, int, bool, Pointer<Size>)>('getChannelInfo');

  late final void Function(Pointer<Char>, int, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) modifyChannelInfo =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Int32, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('modifyChannelInfo');

  late final void Function(Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) searchChannel =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('searchChannel');

  late final bool Function(Pointer<Char>, int) isListenedChannel =
      _lib.lookupFunction<Bool Function(Pointer<Char>, Size), bool Function(Pointer<Char>, int)>('isListenedChannel');

  late final void Function(Pointer<Char>, int, bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) listenChannel =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('listenChannel');

  late final Pointer<Char> Function(Pointer<Size>) getMyChannels =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Size>), Pointer<Char> Function(Pointer<Size>)>('getMyChannels');

  late final Pointer<Char> Function(Pointer<Size>) getListenedChannels =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Size>), Pointer<Char> Function(Pointer<Size>)>('getListenedChannels');

  late final void Function(Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) getRemoteListenedChannels =
      _lib.lookupFunction<Void Function(Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('getRemoteListenedChannels');

  late final void Function(Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) destoryChannel =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('destoryChannel');

  late final Pointer<Char> Function(Pointer<Size>) getAppPath =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Size>), Pointer<Char> Function(Pointer<Size>)>('getAppPath');

  late final Pointer<Char> Function(Pointer<Char>, int, bool, Pointer<Size>) getDomainInfo =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Char>, Size, Bool, Pointer<Size>), Pointer<Char> Function(Pointer<Char>, int, bool, Pointer<Size>)>('getDomainInfo');
